# stepik

./: Dockerfile  README.md  pyproject.toml
app/: conftest.py  db.sqlite3
app/core/: celery.py  settings.py  urls.py  utils.py
app/core/tests/: test_utils.py
app/events/: authentication.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
app/events/migrations/: 0001_initial.py
app/events/tests/: conftest.py  test_authentication.py  test_services.py  test_tasks.py  test_views.py
app/finances/: models.py  services.py
app/finances/migrations/: 0001_initial.py
app/finances/tests/: test_services.py
app/orders/: models.py
app/orders/migrations/: 0001_initial.py
